--- a/scss/componentes/_body.scss
+++ b/scss/componentes/_body.scss
@@ -1,5 +1,12 @@
 body{
-    background-color: nth($arcoiris,1);
+    background-color: #c9184a;
+    font-family: 'Mulish', sans-serif;
+    overflow-x: hidden;
+   
 }
 
-
+header{
+    .rosita{
+        width: 100%;
+    }
+}
