--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,5 @@
 @import'base/colores';
 @import'componentes/body';
-@import'componentes/footer';
-@import'componentes/navbar';
-
+@import'componentes/header';
+@import'componentes/nav';
 
