--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #c9184a;
+  background-image: linear-gradient(to top left, #590d22, #800f2f, #a4133c, #c9184a, #ff4d6d, #ff758f, #ff8fa3, #ffb3c1, #ffccd5, #fff0f3);
+  color: black;
   font-family: "Mulish", sans-serif;
   overflow-x: hidden;
 }
@@ -9,24 +10,38 @@ header .rosita {
 }
 
 nav {
-  background-color: #ff4d6d;
-  color: #c9184a;
+  background-image: linear-gradient(to top left, #ff0a54, #ff477e, #ff5c8a, #ff7096, #ff85a1, #ff99ac, #fbb1bd, #f9bec7, #f7cad0, #fae0e4);
+  color: black;
   margin-top: 1%;
   margin-bottom: 1%;
   margin-left: 2%;
   margin-right: 2%;
 }
 nav li {
-  background-color: lightpink;
-  color: lightgreen;
+  background-image: linear-gradient(to top left, #ff0a54, #ff477e, #ff5c8a, #ff7096, #ff85a1, #ff99ac, #fbb1bd, #f9bec7, #f7cad0, #fae0e4);
+  color: black;
   text-decoration-color: #ff758f;
   border-radius: 5px;
 }
 nav li a {
-  background-color: #ff758f;
-  color: lightyellow;
+  background-image: linear-gradient(to top left, #ff0a54, #ff477e, #ff5c8a, #ff7096, #ff85a1, #ff99ac, #fbb1bd, #f9bec7, #f7cad0, #fae0e4);
+  color: black;
   text-decoration-color: #ff758f;
   border-radius: 5px;
+}
+nav lihover {
+  background-image: linear-gradient(to top left, #f9dbbd, #ffa5ab, #da627d, #a53860, #450920);
+  color: black;
+}
+
+.btn-3 {
+  background-image: linear-gradient(to top left, #f9dbbd, #ffa5ab, #da627d, #a53860, #450920);
+  color: black;
+}
+
+.btn-3:hover {
+  background-image: linear-gradient(to top left, #99e2b4, #88d4ab, #78c6a3, #67b99a, #56ab91, #469d89, #358f80, #248277, #14746f, #036666);
+  color: black;
 }
 
 /*# sourceMappingURL=style.css.map */
