--- a/scss/base/_colores.scss
+++ b/scss/base/_colores.scss
@@ -1,15 +1,57 @@
-$color-natural:lightgreen;
+@use 'sass:list';
+
+$color-natural:black;
+$color-naturalo:lightgreen;
 $color-loco: lightpink;
 $color-naturalis: lightyellow;
 $color-loquis: #ff758f;
+$color-random: lightblue;
+
 
 
 @mixin color-scheme($text, $bg){
+
+@if list.length($bg) == 1{
     background-color: $bg;
+    } @else{
+    background-image: linear-gradient(to top left, $bg);
+
+    }
     color: $text;
 }
 
-$scheme-uno: $color-natural, $color-loco;
-$scheme-gradiente: $color-naturalis, $color-loquis;
+$scheme-solo: $color-random;
+$scheme-uno: $color-natural, ($color-loco, $color-naturalis);
+$scheme-gradiente: black, (#4f000b , #720026 , #ce4257 , #ff7f51 , #ff9b54);
+$scheme-suave: black, (#f08080 , #f4978e , #f8ad9d , #fbc4ab , #ffdab9);
+$scheme-bg: black, (#590d22 , #800f2f , #a4133c , #c9184a , #ff4d6d , #ff758f , #ff8fa3 , #ffb3c1 , #ffccd5 , #fff0f3);
 
+$scheme-arcoiris: black, (#ffd6a5 , #fdffb6 , #caffbf ,  #9bf6ff ,   #a0c4ff ,    #bdb2ff , #ffc6ff,    #fffffc);
+
+//pasteles
+$scheme-pastel:black, (#cdb4db,#ffc8dd,#ffafcc,#bde0fe,#a2d2ff);
+
+//colores formal
+$scheme-formal:black, ( #05668d,#028090,#00a896  ,#02c39a ,#f0f3bd); 
+
+//tierra
+$scheme-tierra:black, ( #22577a , #38a3a5 , #57cc99 , #80ed99 , #c7f9cc); 
+
+$scheme-rosado: black, (#590d22 , #800f2f , #a4133c , #c9184a , #ff4d6d , #ff758f , #ff8fa3 , #ffb3c1 , #ffccd5 , #fff0f3);
+
+$scheme-azulvioleta:black, ( #7400b8 , #6930c3 , #5e60ce , #5390d9 , #4ea8de , #48bfe3 , #56cfe1 , #64dfdf , #72efdd , #80ffdb );
+
+$scheme-rosaformal: black, ( #f9dbbd , #ffa5ab , #da627d , #a53860 , #450920);
+
+$scheme-zul: black, ( #012a4a , #013a63 , #01497c , #014f86 , #2a6f97 , #2c7da0 , #468faf , #61a5c2 , #89c2d9, #a9d6e5);
+
+$scheme-serenytea: black, (  #74d3ae , #678d58 , #a6c48a , #f6e7cb , #dd9787); 
+
+$scheme-babypastel:black, ( #b0f2b4 , #baf2e9 , #bad7f2 , #f2bac9 , #f2e2ba); 
+
+$scheme-verde:black, ( #99e2b4 , #88d4ab , #78c6a3 , #67b99a , #56ab91 , #469d89 , #358f80 , #248277 , #14746f , #036666);
+
+$scheme-rosabb:black, ( #ff0a54 , #ff477e , #ff5c8a , #ff7096 , #ff85a1 , #ff99ac , #fbb1bd , #f9bec7 , #f7cad0 , #fae0e4);
+
+$scheme-pinterest:black, ( #ffffff, #84dcc6, #a5ffd6, #ffa69e,#ff686b);
 
