--- a/scss/componentes/_body.scss
+++ b/scss/componentes/_body.scss
@@ -1,5 +1,5 @@
 body{
-    background-color: #c9184a;
+    @include color-scheme($scheme-bg ...);
     font-family: 'Mulish', sans-serif;
     overflow-x: hidden;
    
