--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,9 @@
 @import'base/colores';
+@import'componentes/cards';
 @import'componentes/body';
 @import'componentes/header';
 @import'componentes/nav';
 @import'componentes/botones';
+
+
 
