los gradientes más repulsivos de la internet

--- a/scss/componentes/_botones.scss
+++ b/scss/componentes/_botones.scss
@@ -1,7 +1,13 @@
 .btn-3{
     @include color-scheme($scheme-rosaformal ...);
-   
 }
 .btn-3:hover{
     @include color-scheme($scheme-verde ...);
 }
+
+.btn-5{
+    @include color-scheme($scheme-tierra...);
+}
+.btn-5:hover{
+        @include color-scheme($scheme-formal ...);
+    }
