--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
 }
 
 .cartas {
+  background-image: linear-gradient(to top left, #590d22, #800f2f, #a4133c, #c9184a, #ff4d6d, #ff758f, #ff8fa3, #ffb3c1, #ffccd5, #fff0f3);
+  color: black;
   align-items: stretch;
   height: 100%;
 }
@@ -14,16 +16,26 @@
 
 /* animación para las cards con hover */
 .card {
+  background-image: linear-gradient(to top left, #590d22, #800f2f, #a4133c, #c9184a, #ff4d6d, #ff758f, #ff8fa3, #ffb3c1, #ffccd5, #fff0f3);
+  color: black;
   transition: all 0.3s;
   position: relative;
   border: 0.054f5e;
   justify-content: space-around;
 }
 .card :hover {
+  background-image: linear-gradient(to top left, #590d22, #800f2f, #a4133c, #c9184a, #ff4d6d, #ff758f, #ff8fa3, #ffb3c1, #ffccd5, #fff0f3);
+  color: black;
   transform: scale(1.1);
   z-index: 2;
   cursor: pointer;
   justify-content: space-around;
+}
+
+.asides {
+  margin-top: 2%;
+  background-image: linear-gradient(to top left, #012a4a, #013a63, #01497c, #014f86, #2a6f97, #2c7da0, #468faf, #61a5c2, #89c2d9, #a9d6e5);
+  color: black;
 }
 
 body {
@@ -69,6 +81,16 @@ nav li :hover {
 
 .btn-3:hover {
   background-image: linear-gradient(to top left, #99e2b4, #88d4ab, #78c6a3, #67b99a, #56ab91, #469d89, #358f80, #248277, #14746f, #036666);
+  color: black;
+}
+
+.btn-5 {
+  background-image: linear-gradient(to top left, #22577a, #38a3a5, #57cc99, #80ed99, #c7f9cc);
+  color: black;
+}
+
+.btn-5:hover {
+  background-image: linear-gradient(to top left, #05668d, #028090, #00a896, #02c39a, #f0f3bd);
   color: black;
 }
 
