--- a/scss/componentes/_cards.scss
+++ b/scss/componentes/_cards.scss
@@ -3,6 +3,7 @@
 }
 
 .cartas{
+    @include color-scheme($scheme-bg ...);
     align-items: stretch;
     height: 100%;
     }.col-sm{
@@ -13,11 +14,13 @@
 /* animación para las cards con hover */
 
 .card{
+    @include color-scheme($scheme-bg ...);
     transition: all 0.3s;
     position: relative;
     border: .054f5e;
     justify-content: space-around;     
     :hover{  
+        @include color-scheme($scheme-bg ...);
     transform: scale(1.1);
      z-index: 2;
      cursor: pointer;            
@@ -25,4 +28,8 @@
 
 }}
 
+.asides{
+    margin-top: 2%;
+    @include color-scheme($scheme-zul ...);
+}
 
