más te vale que funcione

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,11 @@
 @import'base/colores';
+@import'base/mixin';
+@import'base/variables';
 @import'componentes/cards';
 @import'componentes/body';
 @import'componentes/header';
 @import'componentes/nav';
+@import'componentes/old';
 @import'componentes/botones';
 
 
