--- a/scss/base/_colores.scss
+++ b/scss/base/_colores.scss
@@ -6,7 +6,7 @@ $color-loco: lightpink;
 $color-naturalis: lightyellow;
 $color-loquis: #ff758f;
 $color-random: lightblue;
-
+$accordion-color: lightyellow;
 
 
 @mixin color-scheme($text, $bg){
