--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import'base/mixin';
 @import'base/variables';
 @import'componentes/cards';
+@import'componentes/guias';
 @import'componentes/body';
 @import'componentes/header';
 @import'componentes/nav';
