nuevo diseño test

--- a/scss/componentes/_old.scss
+++ b/scss/componentes/_old.scss
@@ -78,7 +78,7 @@ h2{
 .carousel{
     margin-bottom: 2%;
 }
-/* animación para las cards con hover */
+/* animación para las cards con hover 
 
 .card{
          transition: all 0.3s;
@@ -96,7 +96,7 @@ h2{
          justify-content: space-around;
         
         
-        }
+        }*/
 
 
 .div_1{
