--- a/css/style.css
+++ b/css/style.css
@@ -30,30 +30,6 @@
   border: 1px solid black;
 }
 
-/* animación para las cards con hover */
-.card {
-  background-image: linear-gradient(to top left, #590d22, #800f2f, #a4133c, #c9184a, #ff4d6d, #ff758f, #ff8fa3, #ffb3c1, #ffccd5, #fff0f3);
-  color: black;
-  transition: all 0.3s;
-  position: relative;
-  border: 0.054f5e;
-  justify-content: space-around;
-}
-.card :hover {
-  background-image: linear-gradient(to top left, #590d22, #800f2f, #a4133c, #c9184a, #ff4d6d, #ff758f, #ff8fa3, #ffb3c1, #ffccd5, #fff0f3);
-  color: black;
-  transform: scale(1.1);
-  z-index: 2;
-  cursor: pointer;
-  justify-content: space-around;
-}
-
-.asides {
-  margin-top: 2%;
-  background-image: linear-gradient(to top left, #012a4a, #013a63, #01497c, #014f86, #2a6f97, #2c7da0, #468faf, #61a5c2, #89c2d9, #a9d6e5);
-  color: black;
-}
-
 .accordion-button:is(.collapsed)::after {
   box-shadow: 3px;
   background-color: lightblue;
@@ -72,7 +48,7 @@
   background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%237400b8'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
 }
 
-body {
+.page-header {
   background-image: linear-gradient(to top left, #590d22, #800f2f, #a4133c, #c9184a, #ff4d6d, #ff758f, #ff8fa3, #ffb3c1, #ffccd5, #fff0f3);
   color: black;
   overflow-x: hidden;
@@ -182,22 +158,25 @@ h2 {
   margin-bottom: 2%;
 }
 
-/* animación para las cards con hover */
-.card {
-  transition: all 0.3s;
-  position: relative;
-  border: 0.054f5e;
-  justify-content: space-around;
-}
+/* animación para las cards con hover 
+
+.card{
+         transition: all 0.3s;
+         position: relative;
+         border: .054f5e;
+         justify-content: space-around;
+
+       }
 
 .card:hover {
-  filter: grayscale(0);
-  transform: scale(1.1);
-  z-index: 2;
-  cursor: pointer;
-  justify-content: space-around;
-}
+        filter: grayscale(0);
+        transform: scale(1.1);
+         z-index: 2;
+         cursor: pointer;            
+         justify-content: space-around;
 
+
+        }*/
 .div_1 {
   margin: 0px;
   padding: 0px;
