--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,11 @@
   background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%237400b8'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
 }
 
+* {
+  overflow-block: auto;
+  overflow-x: hidden;
+}
+
 .page-header {
   background-image: linear-gradient(to top left, #590d22, #800f2f, #a4133c, #c9184a, #ff4d6d, #ff758f, #ff8fa3, #ffb3c1, #ffccd5, #fff0f3);
   color: black;
@@ -56,6 +61,10 @@
 
 header .rosita {
   width: 100%;
+}
+
+.whity {
+  margin-top: 30%;
 }
 
 nav {
@@ -89,44 +98,43 @@ body {
   overflow-x: hidden;
 }
 
-/* animación gradiente del header */
+/* animación gradiente del header 
 header {
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
-  overflow-x: hidden;
-}
+        background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+        background-size: 400% 400%;
+        animation: gradient 15s ease infinite;
+        overflow-x: hidden;
 
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
-/* h1 y h2 del header */
-h1 {
-  margin: 1%;
-  margin-left: 1%;
-  color: greenyellow;
-}
+    }
 
-h2 {
-  margin: 1%;
-  margin-left: 1%;
+    @keyframes gradient {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+    }
+/* h1 y h2 del header 
+h1{
+    margin: 1%;
+    margin-left: 1%;
+    color: greenyellow;
 }
-
-/* gift el bicho saltando */
-.bicho {
-  align-self: end;
-  width: 20%;
-  overflow-x: hidden;
+h2{
+     margin: 1%;
+     margin-left: 1%;
 }
+/* gift el bicho saltando 
+.bicho{
+   align-self: end;
+   width: 20%;
+   overflow-x: hidden;
 
+   } */
 /* nav */
 .navbar ul li:hover > ul {
   display: block;
