--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,6 @@
   background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%237400b8'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
 }
 
-* {
-  overflow-block: auto;
-  overflow-x: hidden;
-}
-
 .page-header {
   background-image: linear-gradient(to top left, #590d22, #800f2f, #a4133c, #c9184a, #ff4d6d, #ff758f, #ff8fa3, #ffb3c1, #ffccd5, #fff0f3);
   color: black;
@@ -64,16 +59,12 @@ header .rosita {
 }
 
 .whity {
-  margin-top: 30%;
+  margin-top: 25%;
 }
 
 nav {
   background-image: linear-gradient(to top left, #ff0a54, #ff477e, #ff5c8a, #ff7096, #ff85a1, #ff99ac, #fbb1bd, #f9bec7, #f7cad0, #fae0e4);
   color: black;
-  margin-top: 1%;
-  margin-bottom: 1%;
-  margin-left: 2%;
-  margin-right: 2%;
 }
 nav li {
   background-image: linear-gradient(to top left, #ff0a54, #ff477e, #ff5c8a, #ff7096, #ff85a1, #ff99ac, #fbb1bd, #f9bec7, #f7cad0, #fae0e4);
@@ -166,25 +157,22 @@ h2{
   margin-bottom: 2%;
 }
 
-/* animación para las cards con hover 
+/* animación para las cards con hover */
+.cardi {
+  transition: all 0.3s;
+  position: relative;
+  border: 0.054f5e;
+  justify-content: space-around;
+}
 
-.card{
-         transition: all 0.3s;
-         position: relative;
-         border: .054f5e;
-         justify-content: space-around;
+.cardi:hover {
+  filter: grayscale(0);
+  transform: scale(1.1);
+  z-index: 2;
+  cursor: pointer;
+  justify-content: space-around;
+}
 
-       }
-
-.card:hover {
-        filter: grayscale(0);
-        transform: scale(1.1);
-         z-index: 2;
-         cursor: pointer;            
-         justify-content: space-around;
-
-
-        }*/
 .div_1 {
   margin: 0px;
   padding: 0px;
