--- a/scss/componentes/_old.scss
+++ b/scss/componentes/_old.scss
@@ -78,9 +78,9 @@ h2{
 .carousel{
     margin-bottom: 2%;
 }
-/* animación para las cards con hover 
+/* animación para las cards con hover */
 
-.card{
+.cardi{
          transition: all 0.3s;
          position: relative;
          border: .054f5e;
@@ -88,7 +88,7 @@ h2{
        
        }
 
-.card:hover {
+.cardi:hover {
         filter: grayscale(0);
         transform: scale(1.1);
          z-index: 2;
@@ -96,7 +96,7 @@ h2{
          justify-content: space-around;
         
         
-        }*/
+        }
 
 
 .div_1{
