--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,20 @@ header .rosita {
   margin-top: 25%;
 }
 
+.efecti {
+  background-image: linear-gradient(to top left, #74d3ae, #678d58, #a6c48a, #f6e7cb, #dd9787);
+  color: black;
+}
+
+.curso {
+  margin: 3%;
+  padding: 3%;
+}
+
+.cartas {
+  margin: 1%;
+}
+
 nav {
   background-image: linear-gradient(to top left, #ff0a54, #ff477e, #ff5c8a, #ff7096, #ff85a1, #ff99ac, #fbb1bd, #f9bec7, #f7cad0, #fae0e4);
   color: white;
